--- a/porocilo_seminar_D.Rmd
+++ b/porocilo_seminar_D.Rmd
@@ -27,13 +27,12 @@ library("TTR")
 
 ```{r, echo=TRUE, eval=TRUE, results="markup", echo=FALSE}
 setwd("C:/Users/aanja/OneDrive/Dokumenti/fmf/magisterij/časovne vrste/seminar/Time-series")
-
 ```
 
 
 <h1> DATOTEKA A </h1>
 
-1. Narišite graf in komentirajte, ali se iz njega vidi kakšen trend ali sezonskost.
+<h5> 1. Narišite graf in komentirajte, ali se iz njega vidi kakšen trend ali sezonskost. </h5>
 ```{r, echo=TRUE, eval=TRUE, results="markup",echo=FALSE}
 file2 <- file("A09tri.txt")
 str_data2 <- readLines(file2)
@@ -51,14 +50,15 @@ print(komentar)
 
 ```
 
-2. Odstranite morebiten trend in sezonskost z metodami, uporabljenimi pri tečaju:
+<h5> 2. Odstranite morebiten trend in sezonskost z metodami, uporabljenimi pri tečaju:
 (zaporedno) diferenciranje, logaritmiranje, neposredna ocena sezonskih komponent,
 polinomski trend stopnje največ 3 ali prileganje periodične funkcije (ali kakšna kombinacija teh metod).
-Potem ko odstranite morebiten trend, narišite tudi surovi in zglajeni periodogram ter komentirajte, ali se vidi kakšna sezonskost in kakšna naj bi bila perioda.
+Potem ko odstranite morebiten trend, narišite tudi surovi in zglajeni periodogram ter komentirajte, ali se vidi kakšna sezonskost in kakšna naj bi bila perioda. </h5>
 
 REŠEVANJE:
 logaritmiranja ne moremo uporabiti, ker imamo negativne podatke
 diferenciranje:
+
 
 ```{r, echo=TRUE, eval=TRUE, results="markup",echo=FALSE}
 #Opazujmo diference
@@ -128,25 +128,8 @@ points(d.fit,col="red",type="o",pch=16,cex=0.5)
 ```
 
 ```{r, echo=TRUE, eval=TRUE, results="markup", echo=FALSE}
-# # DRUG PRISTOP:
-# library(TSA)
-# x.p <- periodogram(x)
-# order(x.p$spec,decreasing=TRUE) #these are heights
-# 
-# # Top frequencies at 216 215 223 222
-# #what are those frequencies?
-# 
-# x.p$freq[c(216,215,223,222)]
-# 
-# # Raw periodogram - we take frequences
-# # sin(2*pi*0.2500000*t) + cos(2*pi*0.2500000*t)
-# # sin(2*pi*0.2488426*t) + cos(2*pi*0.2488426*t)
-# # sin(2*pi*0.2581019*t) + cos(2*pi*0.2581019*t)
-# # sin(2*pi*0.2569444*t) + cos(2*pi*0.2569444*t)
-# 
-# #what are the periods of those?
-# 1/x.p$freq[c(216,215,223,222)]
-# 
+# A MISLIŠ, DA TO RABIVA? 
+
 # # Smoothed periodogram
 # # ====================
 # # Raw periodogram as a density estimator (identical numbers)
@@ -210,78 +193,51 @@ points(d.fit,col="red",type="o",pch=16,cex=0.5)
 # 
 # # Period
 # 1/x.sp$freq[c(216,217,215,218)]
-# 
-# # Harmonic regression
-# # ===================
-# library(TSA)
-# plot(x, ylab=expression(paste(nabla,x[t]," [pp]")))
-# 
-# tt <- time(x)
-# 
-# mod.H1 <- lm(x ~ I(sin(2*pi*tt*4)) + I(cos(2*pi*tt*4)))
-# summary(mod.H1)
-# 
-# mod.H2 <- lm(x ~ I(sin(2*pi*tt*4)) + I(cos(2*pi*tt*4)) + I(sin(2*pi*tt*3.981567)) + I(cos(2*pi*tt*3.981567)))
-# summary(mod.H2)
-# 
-# # Fitted values and residuals
-# 
-# x.fit <- mod.H1$fitted.values
-# x.fit <- ts(x.fit,start=start(x),frequency=frequency(x))
-# 
-# points(x.fit,col="red",type="o",pch=16,cex=0.5)
-# 
-# r <- residuals(mod.H2)
-# #ne delaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaa
-```
-
-
-3. TOČKA: Narišite graf rezidualov in komentirajte, ali so videti stacionarni. Stacionarnost tudi preizkusite z uporabo ustreznih statističnih metod.
-
-```{r, echo=TRUE, eval=TRUE, results="markup",echo=FALSE}
-
-# plot(x.res, main="Residuals")
-# 
-# summary(mod.H)$adj.r.squared
-# 
-# plot(x.res, main= 'Residuali časovne vrste A', ylab="Residuals",type='l')
-# 
-# abline(h=mean(x.res),col="blue")
-# abline(h=c(mean(x.res)-sd(x.res),mean(x.res)+sd(x.res)),col="blue",lty="dotted")
-# 
-# 
-# library(tseries)
-# # Augmented Dickey-Fuller Test za preverjanje stacionarnosti
-# adf.test(x.res,alternative="stationary")
-# # we say: ro - 1 = gamma 
-# # Ho : gamma = 0 -> random walk (not stationary)
-# # H1 : gamma < 0 -> stationary series
-# 
-# # this test is only appropriate if we remove seasonal and trend component
-# # result: we reject Ho, so series is stationary!
-# 
-# komentar <- paste('Augmented Dickey-Fuller Test ne zavrne stacionarnosti.')
-# print(komentar)
-
 
 ```
 
 ```{r, echo=TRUE, eval=TRUE, results="markup",echo=FALSE}
+# par(mfrow=c(2,1))
+# 
+# my.trend <- function(t){coefficients(mod.H2)[1] + coefficients(mod.H2)[2] * t}
+# 
+# curve(my.trend, from=0, to=length(mod.H2),
+#       main="Time series decomposition",
+#       xlab="Time",
+#       ylab="Trend")
+# 
+# my.season <- function(t){coefficients(mod.H2)[3]*sin(2*pi*t) + coefficients(mod.H2)[4] * cos(2*pi*t)}
+# 
+# curve(my.season,from=0, to=length(mod.H2),
+#       main="Time series decomposition",
+#       xlab="Time",
+#       ylab="Season")
+# 
+# par(mfrow=c(1,1))
+# 
+# plot(stl(x,s.window="periodic"))
 
-plot(d.res, main="Residuals")
+```
 
-summary(mod.H2)$adj.r.squared
 
-plot(d.res, main= 'Residuali časovne vrste A', ylab="Residuals",type='l')
+<h5> 3. TOČKA: Narišite graf rezidualov in komentirajte, ali so videti stacionarni. Stacionarnost tudi preizkusite z uporabo ustreznih statističnih metod. </h5>
 
-abline(h=mean(d.res),col="blue")
-abline(h=c(mean(d.res)-sd(d.res),mean(d.res)+sd(d.res)),col="blue",lty="dotted")
+```{r, echo=TRUE, eval=TRUE, results="markup",echo=FALSE}
+
+plot(x.res, main="Residuals")
+
+summary(mod.H)$adj.r.squared
+
+plot(x.res, main= 'Residuali časovne vrste A', ylab="Residuals",type='l')
+
+abline(h=mean(x.res),col="blue")
+abline(h=c(mean(x.res)-sd(x.res),mean(x.res)+sd(x.res)),col="blue",lty="dotted")
 
 
 library(tseries)
 # Augmented Dickey-Fuller Test za preverjanje stacionarnosti
-adf.test(d.res,alternative="stationary")
-# we say: ro - 1 = gamma 
+adf.test(x.res,alternative="stationary")
+# we say: ro - 1 = gamma
 # Ho : gamma = 0 -> random walk (not stationary)
 # H1 : gamma < 0 -> stationary series
 
@@ -294,14 +250,37 @@ print(komentar)
 
 ```
 
-4. TOČKA: Na rezidualih naredite grafikona ACF in PACF in na njuni podlagi predlagajte vsaj en model vrste AR(p) ali MA(q).
+```{r, echo=TRUE, eval=TRUE, results="markup",echo=FALSE}
+#analiza residualov
+plot(d.res, main="Residuals")
+summary(mod.H2)$adj.r.squared
+plot(d.res, main= 'Residuali časovne vrste A', ylab="Residuals",type='l')
+
+abline(h=mean(d.res),col="blue")
+abline(h=c(mean(d.res)-sd(d.res),mean(d.res)+sd(d.res)),col="blue",lty="dotted")
+```
+
+```{r, echo=TRUE, eval=TRUE, results="markup",echo=FALSE}
+library(tseries)
+# Augmented Dickey-Fuller Test za preverjanje stacionarnosti
+adf.test(d.res,alternative="stationary")
+
+# we say: ro - 1 = gamma 
+# Ho : gamma = 0 -> random walk (not stationary)
+# H1 : gamma < 0 -> stationary series
+
+# this test is only appropriate if we remove seasonal and trend component
+# result: we reject Ho, so series is stationary!
+
+komentar <- paste('Augmented Dickey-Fuller Test ne zavrne stacionarnosti.')
+print(komentar)
+```
+
+
+<h5> 4. TOČKA: Na rezidualih naredite grafikona ACF in PACF in na njuni podlagi predlagajte vsaj en model vrste AR(p) ali MA(q). </h5>
 
 ```{r, echo=TRUE, eval=TRUE, results="markup",echo=FALSE}
 library(forecast)
-
-# #zelo slabo, to ne more biti okej?
-# Acf(x.res, main = "Acf residuals")  
-# Pacf(x.res, main = "Pacf residuals")
 
 Acf(d.res, main = "Acf residuals") #MA(1)?
 Pacf(d.res, main = "Pacf residuals") #no idea
@@ -312,7 +291,7 @@ print(komentar)
 
 ```
 
-5. TOČKA: Na podlagi Yule–Walkerjevih cenilk in kriterija AIC izberite najboljši model AR(p). Primerjajte ga z najboljšim modelom ARMA(p, q) za p + q ≤ 3 po kriteriju AIC (pozor: kriterij AIC je lahko definiran drugače od postopka do postopka). Če je videti smiselno, pa namesto tega uporabite model GARCH.
+<h5> 5. TOČKA: Na podlagi Yule–Walkerjevih cenilk in kriterija AIC izberite najboljši model AR(p). Primerjajte ga z najboljšim modelom ARMA(p, q) za p + q ≤ 3 po kriteriju AIC (pozor: kriterij AIC je lahko definiran drugače od postopka do postopka). Če je videti smiselno, pa namesto tega uporabite model GARCH. </h5>
 
 ```{r, echo=TRUE, eval=TRUE, results="markup", echo=FALSE}
 # # ==========
@@ -397,7 +376,7 @@ print(komentar)
 ```
 
 
-6. TOČKA: Izberite »optimalni« model in ocenite vse njegove parametre.
+<h5> 6. TOČKA: Izberite »optimalni« model in ocenite vse njegove parametre. </h5>
 
 ```{r, echo=TRUE, eval=TRUE, results="markup",echo=FALSE}
 # OPTIMALNI MODEL: izberemo tisti model, ki ima najnižji aic. V najinem primeru je to AR(3). Druga možna izbira bi bila model z MA(1) in AR(2).
@@ -428,7 +407,7 @@ print(komentar)
 ```
 
 
-7. TOČKA: Oglejte si ostanke po vašem modelu in komentirajte, ali so videti kot beli šum. Primerjajte njihovo porazdelitev z normalno.
+<h5> 7. Oglejte si ostanke po vašem modelu in komentirajte, ali so videti kot beli šum. Primerjajte njihovo porazdelitev z normalno. </h5>
 ```{r, echo=TRUE, eval=TRUE, results="markup",echo=FALSE}
 #odgovori
 #Če je white noise nobena frekvenca ni dominantna. Bi mogel biti graf dokaj raven
@@ -447,7 +426,7 @@ print(komentar)
 
 ```
 
-8. TOČKA: Z uporabo izbranega modela in pod predpostavko normalnosti z R-ovo funkcijo predict konstruirajte 90% napovedni interval za naslednjo vrednost. Ne pozabite vračunati tudi odstranjenega trenda in sezonskosti.
+<h5> 8. Z uporabo izbranega modela in pod predpostavko normalnosti z R-ovo funkcijo predict konstruirajte 90% napovedni interval za naslednjo vrednost. Ne pozabite vračunati tudi odstranjenega trenda in sezonskosti. </h5>
 
 ```{r, echo=TRUE, eval=TRUE, results="markup",echo=FALSE}
 
@@ -465,7 +444,7 @@ print(komentar)
 # plot(append(naslednji, x)[???:???], type="l", main="Prediction", ylab="Value", col='red')
 ```
 
-9. TOČKA: Dobljeni napovedni interval primerjajte z napovednim intervalom, ki bi ga dobili, če bi naivno privzeli, da so podatki kar Gaussov beli šum – pred in po odstranitvi trenda in sezonskosti.
+<h5> 9. Dobljeni napovedni interval primerjajte z napovednim intervalom, ki bi ga dobili, če bi naivno privzeli, da so podatki kar Gaussov beli šum – pred in po odstranitvi trenda in sezonskosti. </h5>
 
 ```{r, echo=TRUE, eval=TRUE, results="markup", echo=FALSE}
 # naive_gaussian <- mean(x)
@@ -490,7 +469,7 @@ print(komentar)
 <h1> DATOTEKA B </h1>
 
 
-1. *Narišite graf in komentirajte, ali se iz njega vidi kakšen trend ali sezonskost.*
+<h5> 1. *Narišite graf in komentirajte, ali se iz njega vidi kakšen trend ali sezonskost.* </h5>
 ```{r, echo=TRUE, eval=TRUE, results="markup",echo=FALSE}
 file2 <- file("B09los.txt")
 str_data2 <- readLines(file2)
@@ -505,13 +484,19 @@ print(komentar)
 
 ```
 
-2. *Odstranite morebiten trend in sezonskost z metodami, uporabljenimi pri tečaju: (zaporedno) diferenciranje, logaritmiranje, neposredna ocena sezonskih komponent, polinomski trend stopnje največ 3 ali prileganje periodične funkcije (ali kakšna kombinacija teh metod). Potem ko odstranite morebiten trend, narišite tudi surovi in zglajeni periodogram ter komentirajte, ali se vidi kakšna sezonskost in kakšna naj bi bila perioda.*
+<h5> 2. *Odstranite morebiten trend in sezonskost z metodami, uporabljenimi pri tečaju: (zaporedno) diferenciranje, logaritmiranje, neposredna ocena sezonskih komponent, polinomski trend stopnje največ 3 ali prileganje periodične funkcije (ali kakšna kombinacija teh metod). Potem ko odstranite morebiten trend, narišite tudi surovi in zglajeni periodogram ter komentirajte, ali se vidi kakšna sezonskost in kakšna naj bi bila perioda.* </h5>
 
-
-Logaritmiranja ne moremo uporabiti, ker imamo negativne podatke. Uporabimo
-diferenciranje:
 
 ```{r, echo=TRUE, eval=TRUE, results="markup",echo=FALSE}
+
+#linearni trend? ne dela to, sej nevem a to rabiva?
+# t <- time(x)
+# lint <- lm(x ~ t)
+# # n <- as.numeric(lint$coefficients[1])
+# # k <- as.numeric(lint$coefficients[2])
+# line(time,42.5988+0.2905*time, col = 'red')
+
+
 #Opazujmo diference
 d <- diff(x)
 plot(d, main='Diference časovne vrste B', xlim = c(0,100), ylab=expression(paste(nabla,x[t]," [pp]")),type='l')
@@ -541,7 +526,7 @@ points(d.fit,col="red",type="o",pch=16,cex=0.5)
 ```
 
 
-3. *Narišite graf rezidualov in komentirajte, ali so videti stacionarni. Stacionarnost tudi preizkusite z uporabo ustreznih statističnih metod.*
+<h5> 3. *Narišite graf rezidualov in komentirajte, ali so videti stacionarni. Stacionarnost tudi preizkusite z uporabo ustreznih statističnih metod.* </h5>
 
 ```{r, echo=TRUE, eval=TRUE, results="markup",echo=FALSE}
 
@@ -601,7 +586,7 @@ print(komentar)
 
 ```
 
-4. *Na rezidualih naredite grafikona ACF in PACF in na njuni podlagi predlagajte vsaj en model vrste AR(p) ali MA(q).*
+<h5> 4. *Na rezidualih naredite grafikona ACF in PACF in na njuni podlagi predlagajte vsaj en model vrste AR(p) ali MA(q).* </h5>
 
 ```{r, echo=TRUE, eval=TRUE, results="markup",echo=FALSE}
 library(forecast)
@@ -611,7 +596,7 @@ library(forecast)
 # Pacf(x.res, main = "Pacf residuals")
 
 Acf(d.res, main = "Acf residuals") #MA(1)?
-Pacf(d.res, main = "Pacf residuals") #no idea
+Pacf(d.res, main = "Pacf residuals") #AR(3)?
 
 #PREDLOG MODELA:
 komentar <- paste('MA(1)??')
@@ -619,7 +604,7 @@ print(komentar)
 
 ```
 
-5. *Na podlagi Yule–Walkerjevih cenilk in kriterija AIC izberite najboljši model AR(p). Primerjajte ga z najboljšim modelom ARMA(p, q) za p + q ≤ 3 po kriteriju AIC (pozor: kriterij AIC je lahko definiran drugače od postopka do postopka). Če je videti smiselno, pa namesto tega uporabite model GARCH.*
+<h5> 5. *Na podlagi Yule–Walkerjevih cenilk in kriterija AIC izberite najboljši model AR(p). Primerjajte ga z najboljšim modelom ARMA(p, q) za p + q ≤ 3 po kriteriju AIC (pozor: kriterij AIC je lahko definiran drugače od postopka do postopka). Če je videti smiselno, pa namesto tega uporabite model GARCH.* </h5>
 
 ```{r, echo=TRUE, eval=TRUE, results="markup", echo=FALSE}
 # ==========
@@ -639,7 +624,7 @@ arima(d.res, order=c(0,0,1)) #aic = 2513.86 #dejva tega :D
 # arima(d.res, order=c(3,0,0)) #aic = 2528.42
 # arima(d.res, order=c(0,0,3)) #aic = 2516.6
 
-#odločava se med: 1) AR(1) in MA(1), 
+#odločava se med: 1) AR(1) in MA(1),
 #                 2) MA(1),
 #                 3) AR(2) in MA(1)
 #                 4) AR(1) in MA(2)
@@ -648,11 +633,45 @@ arima(d.res, order=c(0,0,1)) #aic = 2513.86 #dejva tega :D
 
 komentar <- paste('Izbrali sva model MA(1).')
 print(komentar)
+```
+
+```{r, echo=TRUE, eval=TRUE, results="markup", echo=FALSE}
+komentar <- paste('Profesor Toman je bil bolj eleganten in se je iskanja rešitve lotil s preprosto zanko.')
+print(komentar)
+
+my.arma <- stats::arima(d,order=c(1,0,1),include.mean=FALSE,method="ML")
+
+AIC(my.arma)
+
+ic.values <- matrix(NA,nrow=3,ncol=3,
+                    dimnames=list(paste("AR=",0:2,sep=""),
+                                  paste("MA=",0:2,sep="")))
+
+for(i in 1:3){
+    for(j in 1:3){
+        my.arma <- stats::arima(d,order=c(i-1,0,j-1),include.mean=FALSE,method="ML")
+        ic.values[i,j] <- AIC(my.arma)
+        remove(my.arma)
+    }
+}
+
+ic.values
+
+which.min(ic.values)
+
+ic.values == min(ic.values)
+
+komentar <- paste('Tudi algoritem vrne model MA(1) ali ARMA(0,1).')
+print(komentar)
+
+my.arma <- stats::arima(d,order=c(0,0,1),include.mean=FALSE,method="ML")
+
+confint(my.arma,level=0.95)
 
 ```
 
 
-6. *Izberite »optimalni« model in ocenite vse njegove parametre.*
+<h5> 6. *Izberite »optimalni« model in ocenite vse njegove parametre.* </h5>
 
 ```{r, echo=TRUE, eval=TRUE, results="markup",echo=FALSE}
 # OPTIMALNI MODEL: izberemo tisti model, ki ima najnižji aic. V najinem primeru je to AR(3). Druga možna izbira bi bila model z MA(1) in AR(2).
@@ -683,7 +702,7 @@ print(komentar)
 ```
 
 
-7. *Oglejte si ostanke po vašem modelu in komentirajte, ali so videti kot beli šum. Primerjajte njihovo porazdelitev z normalno.*
+<h5> 7. *Oglejte si ostanke po vašem modelu in komentirajte, ali so videti kot beli šum. Primerjajte njihovo porazdelitev z normalno.* </h5>
 ```{r, echo=TRUE, eval=TRUE, results="markup",echo=FALSE}
 #odgovori
 #Če je white noise nobena frekvenca ni dominantna. Bi mogel biti graf dokaj raven
@@ -702,12 +721,42 @@ print(komentar)
 
 ```
 
-8. *Z uporabo izbranega modela in pod predpostavko normalnosti z R-ovo funkcijo predict konstruirajte 90% napovedni interval za naslednjo vrednost. Ne pozabite vračunati tudi odstranjenega trenda in sezonskosti.*
+<h5> 8. *Z uporabo izbranega modela in pod predpostavko normalnosti z R-ovo funkcijo predict konstruirajte 90% napovedni interval za naslednjo vrednost. Ne pozabite vračunati tudi odstranjenega trenda in sezonskosti.* </h5>
 
 ```{r, echo=TRUE, eval=TRUE, results="markup",echo=FALSE}
 
 # TA DEL JE SKOR ZIHR NAROBE! Sem napisala ?? tja kamor nevem kaj bi napisala
 
+################### TOMAN ############################3
+# ARMA predictions
+
+A <- predict(my.arma,n.ahead=10, level = 0.90)$pred
+
+# Harmonic regression predictions
+
+B <- predict(mod.H2,n.ahead=10, level = 0.90)[length(mod.H2)-length(A):length(mod.H2)]
+
+# Predictions for differenced data
+
+A+B
+
+# Undiferencing
+
+C <- x[length(x)] + cumsum(A+B)
+C <- ts(C,start=length(x))
+X <- ts.union(x,C)
+
+plot(X,plot.type="single",
+     ylab="%",
+     col=c("black","blue"))
+
+legend("topright",
+       c("Observed","Predicted"),
+       col=c("black","blue"),
+       lty="solid",
+       bty="n")
+
+##################################################################
 # prediction <- predict(best, n.ahead = 1, interval = "prediction", level = 0.90)
 # val1 <- prediction$pred[1]
 # sd1 <- prediction$se[1]
@@ -720,10 +769,294 @@ print(komentar)
 # plot(append(naslednji, x)[???:???], type="l", main="Prediction", ylab="Value", col='red')
 ```
 
+<h5> 9. *Dobljeni napovedni interval primerjajte z napovednim intervalom, ki bi ga dobili, če bi naivno privzeli, da so podatki kar Gaussov beli šum – pred in po odstranitvi trenda in sezonskosti.* </h5>
+
+```{r, echo=TRUE, eval=TRUE, results="markup", echo=FALSE}
+
+#Brina to še ne štima (rima). Moram ugotovit kaj je njuna spremenljivka napoved.
+
+# naive_gaussian <- mean(x)
+# z = 1.96
+# naive_gaussian_interval <- c(naive_gaussian - z*sd(x), naive_gaussian + z*sd(x))
+# plot(append(x, naive_gaussian), type="l")
+# 
+# better_gaussian <- napoved + mean(x.res) + (sd(x.res)^2)/2
+# 
+# spodnja_meja <- napoved + mean(x.res) + (sd(x.res)^2)/2 - z * sqrt((sd(x.res))^2/length(x.res) + (sd(x.res)^4)/(2*(length(x.res)-1)))
+# zgornja_meja <- napoved + mean(x.res) + (sd(x.res)^2)/2 + z * sqrt((sd(x.res))^2/length(x.res) + (sd(x.res)^4)/(2*(length(x.res)-1)))
+# better_gaussian_interval <- c(spodnja_meja, zgornja_meja)
+# 
+# plot(append(x, better_gaussian), type="l", xlim=c(700,850))
+# plot(append(x, naslednji), type="l", xlim=c(700,850))
+# plot(append(x, naive_gaussian), type="l", xlim=c(700,850))
+# plot(append(x, better_gaussian), type="l", xlim=c(700,850))
+
+```
+
+
+
+<h1> DATOTEKA B, če logaritmiramo </h1>
+
+Brina, tuki že takoj ko logaritmiraš vidiš, da mava problem. Tisti ostri padci niso okej. Nevem kaj naj s tem nardiva :(
+
+
+<h5> 1. *Narišite graf in komentirajte, ali se iz njega vidi kakšen trend ali sezonskost.* </h5>
+```{r, echo=TRUE, eval=TRUE, results="markup",echo=FALSE}
+file2 <- file("B09los.txt")
+str_data2 <- readLines(file2)
+data2 <- as.numeric(unlist(strsplit(str_data2, " ")))
+x <- ts(data2)
+
+# vsa opazovanja:
+plot(x, main="Časovna vrsta podatki B, vsa opazovanja", type='l')
+
+komentar <- paste('Opazimo trend, na prvi pogled ne opazimo sezonskosti.')
+print(komentar)
+
+```
+
+<h5> 2. *Odstranite morebiten trend in sezonskost z metodami, uporabljenimi pri tečaju: (zaporedno) diferenciranje, logaritmiranje, neposredna ocena sezonskih komponent, polinomski trend stopnje največ 3 ali prileganje periodične funkcije (ali kakšna kombinacija teh metod). Potem ko odstranite morebiten trend, narišite tudi surovi in zglajeni periodogram ter komentirajte, ali se vidi kakšna sezonskost in kakšna naj bi bila perioda.* </h5>
+
+
+```{r, echo=TRUE, eval=TRUE, results="markup",echo=FALSE}
+#Opazujmo diference
+d <- log(x)
+plot(d, main='Diference časovne vrste B', xlim = c(0,100), ylab=expression(paste(nabla,x[t]," [pp]")),type='l')
+
+abline(h=mean(d),col="blue")
+abline(h=c(mean(d)-sd(d),mean(d)+sd(d)),col="blue",lty="dotted")
+
+perioda <-  periodogram(d)$lambda[which.max(periodogram(d)$periodogram)] 
+
+t <- time(d)
+mod.H2 <- lm(d ~  I(sin(perioda*t)) + I(cos(perioda*t)))
+summary(mod.H2)
+
+d.fit <- mod.H2$fitted.values
+d.res <- mod.H2$residuals
+
+d.fit <- ts(d.fit,start=start(d),frequency=frequency(d))
+d.res <- ts(d.res,start=start(d),frequency=frequency(d))
+
+par(mfrow=c(1,1))
+plot(d, type='l')
+points(d.fit,col="red",type="o",pch=16,cex=0.5)
+par(mfrow=c(1,1))
+plot(d, type='l', xlim=c(50,150))
+points(d.fit,col="red",type="o",pch=16,cex=0.5)
+
+```
+
+
+3. *Narišite graf rezidualov in komentirajte, ali so videti stacionarni. Stacionarnost tudi preizkusite z uporabo ustreznih statističnih metod.*
+
+```{r, echo=TRUE, eval=TRUE, results="markup",echo=FALSE}
+
+plot(d.res, main="Residuals")
+
+summary(mod.H2)$adj.r.squared
+
+plot(d.res, main= 'Residuali časovne vrste B', ylab="Residuals",type='l')
+
+abline(h=mean(d.res),col="blue")
+abline(h=c(mean(d.res)-sd(d.res),mean(d.res)+sd(d.res)),col="blue",lty="dotted")
+# 
+# 
+library(tseries)
+# Augmented Dickey-Fuller Test za preverjanje stacionarnosti
+adf.test(d.res,alternative="stationary")
+# we say: ro - 1 = gamma
+# Ho : gamma = 0 -> random walk (not stationary)
+# H1 : gamma < 0 -> stationary series
+
+# this test is only appropriate if we remove seasonal and trend component
+# result: we reject Ho, so series is stationary!
+
+komentar <- paste('Augmented Dickey-Fuller Test ne zavrne stacionarnosti.')
+print(komentar)
+
+
+```
+
+```{r, echo=TRUE, eval=TRUE, results="markup",echo=FALSE}
+
+plot(d.res, main="Residuals")
+
+summary(mod.H2)$adj.r.squared
+
+plot(d.res, main= 'Residuali časovne vrste B', ylab="Residuals",type='l')
+
+abline(h=mean(d.res),col="blue")
+abline(h=c(mean(d.res)-sd(d.res),mean(d.res)+sd(d.res)),col="blue",lty="dotted")
+
+
+library(tseries)
+# Augmented Dickey-Fuller Test za preverjanje stacionarnosti
+adf.test(d.res,alternative="stationary")
+# we say: ro - 1 = gamma 
+# Ho : gamma = 0 -> random walk (not stationary)
+# H1 : gamma < 0 -> stationary series
+
+# this test is only appropriate if we remove seasonal and trend component
+# result: we reject Ho, so series is stationary!
+
+#p-value = 0.01
+
+komentar <- paste('Augmented Dickey-Fuller Test ne zavrne stacionarnosti.')
+print(komentar)
+
+
+```
+
+4. *Na rezidualih naredite grafikona ACF in PACF in na njuni podlagi predlagajte vsaj en model vrste AR(p) ali MA(q).*
+
+```{r, echo=TRUE, eval=TRUE, results="markup",echo=FALSE}
+library(forecast)
+
+Acf(d.res, main = "Acf residuals") #MA(5) ali MA(7), to se mi zdi čudno
+Pacf(d.res, main = "Pacf residuals") #AR(5)? ne bi smeli dobit še enga ven pri cca. 12, to je slabo
+
+
+
+#PREDLOG MODELA:
+komentar <- paste('MA(1)??')
+print(komentar)
+
+```
+
+5. *Na podlagi Yule–Walkerjevih cenilk in kriterija AIC izberite najboljši model AR(p). Primerjajte ga z najboljšim modelom ARMA(p, q) za p + q ≤ 3 po kriteriju AIC (pozor: kriterij AIC je lahko definiran drugače od postopka do postopka). Če je videti smiselno, pa namesto tega uporabite model GARCH.*
+
+```{r, echo=TRUE, eval=TRUE, results="markup", echo=FALSE}
+komentar <- paste('Profesor Toman je bil bolj eleganten in se je iskanja rešitve lotil s preprosto zanko.')
+print(komentar)
+
+# my.arma <- stats::arima(d,order=c(1,0,1),include.mean=FALSE,method="ML")
+# 
+# AIC(my.arma)
+# 
+# ic.values <- matrix(NA,nrow=3,ncol=3,
+#                     dimnames=list(paste("AR=",0:2,sep=""),
+#                                   paste("MA=",0:2,sep="")))
+# ic.values[3,3] <- 1000
+# 
+# for(i in 1:3){
+#     for(j in 1:3){
+#         my.arma <- stats::arima(d,order=c(i-1,0,j-1),include.mean=FALSE,method="ML")
+#         ic.values[i,j] <- AIC(my.arma)
+#         remove(my.arma)
+#     }
+# }
+# 
+# ic.values
+# 
+# which.min(ic.values)
+# 
+# ic.values == min(ic.values)
+
+komentar <- paste('Tudi algoritem vrne model MA(1) in AR(1) ali ARMA(1,1).')
+print(komentar)
+
+my.arma <- stats::arima(d,order=c(1,0,1),include.mean=FALSE,method="ML")
+
+# confint(my.arma,level=0.95)
+
+```
+
+
+6. *Izberite »optimalni« model in ocenite vse njegove parametre.*
+
+```{r, echo=TRUE, eval=TRUE, results="markup",echo=FALSE}
+# OPTIMALNI MODEL: izberemo tisti model, ki ima najnižji aic. V najinem primeru je to AR(3). Druga možna izbira bi bila model z MA(1) in AR(2).
+komentar <- paste('OPTIMALNI MODEL: izberemo tisti model, ki ima najnižji aic. V najinem primeru je to ARMA(1,1).')
+print(komentar)
+
+best <- arima(d.res, order=c(1,0,1))
+plot(best$residuals)
+hist(best$residuals)
+
+#Normality test
+shapiro.test(best$residuals) #p-value < 2.2e-16
+
+#plot the results to check the normality
+xx <- seq(-100, 100, by=0.1)
+y1 <- dnorm(xx, mean=mean(best$residuals), sd=(sd(best$residuals)))
+plot(density(best$residuals),col="blue", main ="Normal density funcion comparison", xlab="x")
+lines(xx,y1, col="red")
+legend("topleft",
+       c("Residual density","Normal function"),
+       col=c("blue","red"),
+       lty="solid",
+       bty="n")
+
+komentar <- paste('Shapirov test zavrne hipotezo, torej ne gre za normalno porazdelitev.')
+print(komentar)
+```
+
+
+7. *Oglejte si ostanke po vašem modelu in komentirajte, ali so videti kot beli šum. Primerjajte njihovo porazdelitev z normalno.*
+```{r, echo=TRUE, eval=TRUE, results="markup",echo=FALSE}
+#odgovori
+#Če je white noise nobena frekvenca ni dominantna. Bi mogel biti graf dokaj raven
+
+plot(periodogram(best$residuals)$lambda, periodogram(best$residuals)$periodogram, type="l")
+
+
+Box.test(d.res, lag = 1, type="Box-Pierce") #p-value = 0.09239
+Box.test(d.res, lag = 1, type="Ljung-Box") #p-value = 0.09052
+
+
+#The P-Value of the Ljung-Box white noise test is greater than significance level (i.e. α), so we don't reject the white noise hypothesis (Ho), or, simply stated; there is no statistical evidence of a serial correlation, so the data can be white noise.
+
+komentar <- paste('Imamo white noise!')
+print(komentar)
+
+```
+
+8. *Z uporabo izbranega modela in pod predpostavko normalnosti z R-ovo funkcijo predict konstruirajte 90% napovedni interval za naslednjo vrednost. Ne pozabite vračunati tudi odstranjenega trenda in sezonskosti.*
+
+```{r, echo=TRUE, eval=TRUE, results="markup",echo=FALSE}
+
+# TA DEL JE SKOR ZIHR NAROBE! Sem napisala ?? tja kamor nevem kaj bi napisala
+
+################### TOMAN ############################3
+# ARMA predictions
+
+A <- predict(my.arma,n.ahead=10, level = 0.90)$pred
+
+# Harmonic regression predictions
+
+B <- predict(mod.H2,n.ahead=10, level = 0.90)[length(mod.H2)-length(A):length(mod.H2)]
+
+# Predictions for differenced data
+
+A+B
+
+# Undiferencing
+
+C <- x[length(x)] + cumsum(A+B)
+C <- ts(C,start=length(x))
+X <- ts.union(x,C)
+
+plot(X,plot.type="single",
+     ylab="%",
+     col=c("black","blue"))
+
+legend("topright",
+       c("Observed","Predicted"),
+       col=c("black","blue"),
+       lty="solid",
+       bty="n")
+
+```
+
 9. *Dobljeni napovedni interval primerjajte z napovednim intervalom, ki bi ga dobili, če bi naivno privzeli, da so podatki kar Gaussov beli šum – pred in po odstranitvi trenda in sezonskosti.*
 
 ```{r, echo=TRUE, eval=TRUE, results="markup", echo=FALSE}
+
+#Brina to še ne štima (rima). Moram ugotovit kaj je njuna spremenljivka napoved.
+
 # naive_gaussian <- mean(x)
+# z = 1.96
 # naive_gaussian_interval <- c(naive_gaussian - z*sd(x), naive_gaussian + z*sd(x))
 # plot(append(x, naive_gaussian), type="l")
 # 
