--- a/predstavitev.tex
+++ b/predstavitev.tex
@@ -50,23 +50,24 @@
 \end{frame}
 
 \begin{frame}
-\frametitle{Residuali- stacionarnost}
+\frametitle{Residuali - stacionarnost}
 \includegraphics[width=1\textwidth]{res_casA.png}
 \includegraphics[width=1\textwidth]{DickyTestA.png}
+Test ne zavrne stacionarnosti.
 \end{frame}
 
 \begin{frame}
-\frametitle{ACF}
+\frametitle{ACF in predlog za model MA(p)}
 \includegraphics[width=1\textwidth]{AcfA.png}
 \end{frame}
 
 \begin{frame}
-\frametitle{PACF}
+\frametitle{PACF in predlog za model AR(q)}
 \includegraphics[width=1\textwidth]{PacfA.png}
 \end{frame}
 
 \begin{frame}
-\frametitle{Izbira modela}
+\frametitle{Izbira modela ARMA(p,q) za $ p + q \le 3$}
 \includegraphics[width=1\textwidth]{ModelA.png}
 \end{frame}
 
@@ -105,9 +106,16 @@
 \begin{frame}
 \frametitle{Gaussova napoved}
 \includegraphics[width=1\textwidth]{betterA.png}
+\end{frame}
+\begin{frame}
+\frametitle{Gaussova napoved}
 \includegraphics[width=1\textwidth]{naiveA.png}
+\end{frame}
+\begin{frame}
+\frametitle{Gaussova napoved}
 \includegraphics[width=1\textwidth]{naslednjiA.png}
 \end{frame}
+
 %___________________________________________________________________________________________
 
 \begin{frame}
@@ -202,8 +210,13 @@
 \begin{frame}
 \frametitle{Gaussova napoved}
 \includegraphics[width=1\textwidth]{betterB.png}
+\end{frame}
+\begin{frame}
+\frametitle{Gaussova napoved}
 \includegraphics[width=1\textwidth]{naiveB.png}
+\end{frame}
+\begin{frame}
+\frametitle{Gaussova napoved}
 \includegraphics[width=1\textwidth]{naslednjiB.png}
 \end{frame}
-
 \end{document}
