--- a/predstavitev.tex
+++ b/predstavitev.tex
@@ -151,6 +151,11 @@ Test ne zavrne stacionarnosti.
 \includegraphics[width=1\textwidth]{res_log_B.png}
 \end{frame}
 
+\begin{frame}
+\frametitle{Residuali - stacionarnost}
+\includegraphics[width=1\textwidth]{stacionarnostB.png}
+\end{frame}
+
 
 \begin{frame}
 \frametitle{ACF}
@@ -185,9 +190,9 @@ Test ne zavrne stacionarnosti.
 \begin{frame}
 \frametitle{Test za normalno porazdelitev}
 \includegraphics[width=1\textwidth]{ShapiroB.png}
+\includegraphics[width=1\textwidth]{ninormalnaB.png}
 
 \end{frame}
-
 
 \begin{frame}
 \frametitle{White Noise}
@@ -218,5 +223,9 @@ Test ne zavrne stacionarnosti.
 \begin{frame}
 \frametitle{Gaussova napoved}
 \includegraphics[width=1\textwidth]{naslednjiB.png}
+\end{frame}
+
+\begin{frame}
+\centering Hvala za pozornost!
 \end{frame}
 \end{document}
