--- a/porocilo_seminar_D.tex
+++ b/porocilo_seminar_D.tex
@@ -4,21 +4,10 @@
 %
 \documentclass[
 ]{article}
-\title{Časovne vrste - seminar}
-\usepackage{etoolbox}
-\makeatletter
-\providecommand{\subtitle}[1]{% add subtitle to \maketitle
-  \apptocmd{\@title}{\par {\large #1 \par}}{}{}
-}
-\makeatother
-\subtitle{Poročilo o analizi časovnih vrst}
-\author{Brina Pirc in Anja Trobec}
-\date{Maj 2022}
-
-\usepackage{amsmath,amssymb}
 \usepackage{lmodern}
-\usepackage{iftex}
-\ifPDFTeX
+\usepackage{amssymb,amsmath}
+\usepackage{ifxetex,ifluatex}
+\ifnum 0\ifxetex 1\fi\ifluatex 1\fi=0 % if pdftex
   \usepackage[T1]{fontenc}
   \usepackage[utf8]{inputenc}
   \usepackage{textcomp} % provide euro and other symbols
@@ -53,7 +42,7 @@
   pdfcreator={LaTeX via pandoc}}
 \urlstyle{same} % disable monospaced font for URLs
 \usepackage[margin=1in]{geometry}
-\usepackage{graphicx}
+\usepackage{graphicx,grffile}
 \makeatletter
 \def\maxwidth{\ifdim\Gin@nat@width>\linewidth\linewidth\else\Gin@nat@width\fi}
 \def\maxheight{\ifdim\Gin@nat@height>\textheight\textheight\else\Gin@nat@height\fi}
@@ -70,9 +59,17 @@
 \providecommand{\tightlist}{%
   \setlength{\itemsep}{0pt}\setlength{\parskip}{0pt}}
 \setcounter{secnumdepth}{-\maxdimen} % remove section numbering
-\ifLuaTeX
-  \usepackage{selnolig}  % disable illegal ligatures
-\fi
+
+\title{Časovne vrste - seminar}
+\usepackage{etoolbox}
+\makeatletter
+\providecommand{\subtitle}[1]{% add subtitle to \maketitle
+  \apptocmd{\@title}{\par {\large #1 \par}}{}{}
+}
+\makeatother
+\subtitle{Poročilo o analizi časovnih vrst}
+\author{Brina Pirc in Anja Trobec}
+\date{Maj 2022}
 
 \begin{document}
 \maketitle
@@ -114,132 +111,32 @@ podatke diferenciranje:
 \begin{verbatim}
 ## 
 ## Call:
-## lm(formula = x ~ I(sin(p * t)) + I(cos(p * t)) + I(sin(p2 * t)) + 
-##     I(cos(p2 * t)))
+## lm(formula = x ~ I(sin(p * t)) + I(cos(p * t)))
 ## 
 ## Residuals:
 ##     Min      1Q  Median      3Q     Max 
-## -583.92 -146.58   -7.66  145.46  545.64 
+## -584.12 -145.73   -6.07  148.33  537.65 
 ## 
 ## Coefficients:
-##                Estimate Std. Error t value Pr(>|t|)    
-## (Intercept)    770.8550     7.6106 101.287   <2e-16 ***
-## I(sin(p * t))  287.0049    10.7703  26.648   <2e-16 ***
-## I(cos(p * t))  550.2589    10.7703  51.090   <2e-16 ***
-## I(sin(p2 * t))  18.6738    10.7656   1.735   0.0832 .  
-## I(cos(p2 * t))  -0.4413    10.7751  -0.041   0.9673    
+##               Estimate Std. Error t value Pr(>|t|)    
+## (Intercept)    770.830      7.615  101.22   <2e-16 ***
+## I(sin(p * t))  286.654     10.770   26.62   <2e-16 ***
+## I(cos(p * t))  549.648     10.770   51.04   <2e-16 ***
 ## ---
 ## Signif. codes:  0 '***' 0.001 '**' 0.01 '*' 0.05 '.' 0.1 ' ' 1
 ## 
-## Residual standard error: 219.1 on 824 degrees of freedom
-## Multiple R-squared:  0.8012, Adjusted R-squared:  0.8002 
-## F-statistic: 830.1 on 4 and 824 DF,  p-value: < 2.2e-16
+## Residual standard error: 219.3 on 826 degrees of freedom
+## Multiple R-squared:  0.8004, Adjusted R-squared:    0.8 
+## F-statistic:  1657 on 2 and 826 DF,  p-value: < 2.2e-16
 \end{verbatim}
 
 \includegraphics{porocilo_seminar_D_files/figure-latex/unnamed-chunk-3-1.pdf}
-
-\begin{verbatim}
-## 
-## Call:
-## lm(formula = d ~ I(sin(perioda * t)) + I(cos(perioda * t)))
-## 
-## Residuals:
-##      Min       1Q   Median       3Q      Max 
-## -204.725  -50.142   -0.614   49.743  226.055 
-## 
-## Coefficients:
-##                     Estimate Std. Error t value Pr(>|t|)    
-## (Intercept)          -0.1355     2.5258  -0.054    0.957    
-## I(sin(perioda * t)) 450.9594     3.5720 126.247   <2e-16 ***
-## I(cos(perioda * t)) 862.4393     3.5720 241.442   <2e-16 ***
-## ---
-## Signif. codes:  0 '***' 0.001 '**' 0.01 '*' 0.05 '.' 0.1 ' ' 1
-## 
-## Residual standard error: 72.68 on 825 degrees of freedom
-## Multiple R-squared:  0.989,  Adjusted R-squared:  0.989 
-## F-statistic: 3.712e+04 on 2 and 825 DF,  p-value: < 2.2e-16
-\end{verbatim}
-
 \includegraphics{porocilo_seminar_D_files/figure-latex/unnamed-chunk-3-2.pdf}
-\includegraphics{porocilo_seminar_D_files/figure-latex/unnamed-chunk-3-3.pdf}
-
-\includegraphics{porocilo_seminar_D_files/figure-latex/unnamed-chunk-4-1.pdf}
-\includegraphics{porocilo_seminar_D_files/figure-latex/unnamed-chunk-4-2.pdf}
-
-\begin{verbatim}
-## Daniell(2) 
-## coef[-2] = 0.2
-## coef[-1] = 0.2
-## coef[ 0] = 0.2
-## coef[ 1] = 0.2
-## coef[ 2] = 0.2
-\end{verbatim}
-
-\begin{verbatim}
-## mDaniell(1) 
-## coef[-1] = 0.25
-## coef[ 0] = 0.50
-## coef[ 1] = 0.25
-\end{verbatim}
-
-\begin{verbatim}
-## Daniell(1,1) 
-## coef[-2] = 0.1111
-## coef[-1] = 0.2222
-## coef[ 0] = 0.3333
-## coef[ 1] = 0.2222
-## coef[ 2] = 0.1111
-\end{verbatim}
-
-\begin{verbatim}
-## mDaniell(1,1) 
-## coef[-2] = 0.0625
-## coef[-1] = 0.2500
-## coef[ 0] = 0.3750
-## coef[ 1] = 0.2500
-## coef[ 2] = 0.0625
-\end{verbatim}
-
-\includegraphics{porocilo_seminar_D_files/figure-latex/unnamed-chunk-4-3.pdf}
-\includegraphics{porocilo_seminar_D_files/figure-latex/unnamed-chunk-4-4.pdf}
-\includegraphics{porocilo_seminar_D_files/figure-latex/unnamed-chunk-4-5.pdf}
-
-\begin{verbatim}
-##   [1] 216 217 215 218 214 219 213 220 212 221 211 222 210 223 209 224 208 225
-##  [19] 207 206 226 205 227 204 228 203 229 202 230 201 231 200 232 199 233 198
-##  [37] 234 235 197 236 196 248 250 249 252 251 247 237 253 246 195 254 184 185
-##  [55] 183 182 255 181 245 186 256 180 238 179 244 187 194 257 178 177 258 188
-##  [73] 398 305 399 397 304 176 385 400 306 307 243 384 386 308 303 401 396 259
-##  [91] 387 239 302 321 175 260 193 388 299 322 277 301 298 189 420 300 320 279
-## [109] 278 276 174 309 297 395 419 421 383 261 242 402 156 275 389 280 155 319
-## [127] 173 323 157 418 262 154 394 296 363 422 240 417 390 310 153 190 274 158
-## [145] 393 382 416 324 364 263 281 172 241 403 423 392 295 318 362 152 159 192
-## [163] 391 264 273 191 294 171 381 415 361 365 424 160 311 282 151 374 272 380
-## [181] 325 293 375 265 317 376 360 404 170 266 271 414 366 373 132 169 425 150
-## [199] 379 283 133 292 161 377 267 270 378 333 168 316 372 359 312 131 134 268
-## [217] 269 334 413 284 313 367 291 354 351 326 405 353 162 332 355 352 135 149
-## [235] 412 285 289 290 371 130 426 358 167 288 315 335 314 368 350 286 163 287
-## [253] 165 336 166 406 331 327 357 369 356 411 330 136 129 164 370 337 328 329
-## [271] 148 427 349 407 338 137 410 342 345 348 339 346 347 408 343 409 428 344
-## [289] 341 340 147 128 138 429 431 430 432 139 146 127 140 108 109 107 145 110
-## [307] 106 141 111 105 144 112 142 113 143 104 114 126 103  85 115  84  82  83
-## [325]  86  81  87  88 102  89  80  90 116 125  91 101  92  79 117  64 124  65
-## [343]  93  63 100  62  66  94  61 118  78  95  67  99 123  96  60  97  98 119
-## [361]  68  12  36  13  35  11  77  59  37  34  10  14  33  38  58  69  15   9
-## [379] 120  39 122  32  76  57  16  70   8 121  56  40  31  71  17   7  75  41
-## [397]  55  72  30  18  54  42   6  74  73  29  53  19  43   5  52  28  44  20
-## [415]   4  51  45  27  21  50  46   3  49  22  47  48  26  25  23  24   2   1
-\end{verbatim}
-
-\begin{verbatim}
-## [1] 0.2500000 0.2511574 0.2488426 0.2523148
-\end{verbatim}
-
-\begin{verbatim}
-## [1] 4.000000 3.981567 4.018605 3.963303
-\end{verbatim}
 
 \includegraphics{porocilo_seminar_D_files/figure-latex/unnamed-chunk-5-1.pdf}
+\includegraphics{porocilo_seminar_D_files/figure-latex/unnamed-chunk-5-2.pdf}
+
+\includegraphics{porocilo_seminar_D_files/figure-latex/unnamed-chunk-6-1.pdf}
 
 \begin{enumerate}
 \def\labelenumi{\arabic{enumi}.}
@@ -251,22 +148,22 @@ podatke diferenciranje:
 \end{enumerate}
 
 \begin{verbatim}
-## [1] 0.9889818
+## [1] 0.799963
 \end{verbatim}
 
-\includegraphics{porocilo_seminar_D_files/figure-latex/unnamed-chunk-6-1.pdf}
+\includegraphics{porocilo_seminar_D_files/figure-latex/unnamed-chunk-7-1.pdf}
 
 \begin{verbatim}
 ## 
 ##  Augmented Dickey-Fuller Test
 ## 
-## data:  d.res
-## Dickey-Fuller = -16.866, Lag order = 9, p-value = 0.01
+## data:  x.res
+## Dickey-Fuller = -9.6012, Lag order = 9, p-value = 0.01
 ## alternative hypothesis: stationary
 \end{verbatim}
 
 \begin{verbatim}
-## [1] "Augmented Dickey-Fuller Test ne zavrne stacionarnosti."
+## [1] "Augmented Dickey-Fuller Test zavrne hipotezo o nestacionarnosti, torej imamo stacionarnost."
 \end{verbatim}
 
 \begin{enumerate}
@@ -278,11 +175,11 @@ podatke diferenciranje:
   predlagajte vsaj en model vrste AR(p) ali MA(q).
 \end{enumerate}
 
-\includegraphics{porocilo_seminar_D_files/figure-latex/unnamed-chunk-8-1.pdf}
-\includegraphics{porocilo_seminar_D_files/figure-latex/unnamed-chunk-8-2.pdf}
+\includegraphics{porocilo_seminar_D_files/figure-latex/unnamed-chunk-9-1.pdf}
+\includegraphics{porocilo_seminar_D_files/figure-latex/unnamed-chunk-9-2.pdf}
 
 \begin{verbatim}
-## [1] "Predlagava izbiro modela MA(1) in AR(10), torej ARMA(1,10)."
+## [1] "Predlagava izbiro modela AR(4). V nadaljevanju pa bomo preverili ali gre morda za model ARMA."
 \end{verbatim}
 
 \begin{enumerate}
@@ -300,36 +197,32 @@ podatke diferenciranje:
 \begin{verbatim}
 ## 
 ## Call:
-## ar(x = d.res, aic = TRUE, arg = "yule–walker")
+## ar(x = x.res, aic = TRUE, arg = "yule–walker")
 ## 
 ## Coefficients:
 ##       1        2        3        4        5        6        7        8  
-## -0.9220  -0.9094  -0.8658  -0.8001  -0.7618  -0.6768  -0.6231  -0.5965  
-##       9       10       11       12       13       14       15       16  
-## -0.5208  -0.4867  -0.3520  -0.3175  -0.2951  -0.2842  -0.3573  -0.3849  
-##      17       18       19       20       21       22       23       24  
-## -0.3418  -0.3625  -0.3654  -0.3199  -0.3217  -0.3150  -0.2899  -0.2264  
-##      25       26  
-## -0.1609  -0.0685  
+##  0.0872  -0.3776   0.0657   0.2923   0.0527  -0.0491   0.0633   0.1317  
+##       9       10       11       12       13  
+##  0.0700  -0.0434   0.1332   0.0847   0.0549  
 ## 
-## Order selected 26  sigma^2 estimated as  2852
+## Order selected 13  sigma^2 estimated as  4690
 \end{verbatim}
 
 \begin{verbatim}
 ## 
 ## Call:
-## arima(x = d.res, order = c(0, 0, 1))
+## arima(x = x.res, order = c(0, 0, 1))
 ## 
 ## Coefficients:
-##           ma1  intercept
-##       -0.9897     0.0537
-## s.e.   0.0060     0.0214
+##          ma1  intercept
+##       0.7939    -0.0458
+## s.e.  0.0177    11.5541
 ## 
-## sigma^2 estimated as 2748:  log likelihood = -4455.07,  aic = 8916.14
+## sigma^2 estimated as 34426:  log likelihood = -5506.89,  aic = 11019.79
 \end{verbatim}
 
 \begin{verbatim}
-## [1] "Izbrali sva model MA(1)."
+## [1] "Predlaganega modela AR(4) ne moreva izbrati. Izbereva AR(3)."
 \end{verbatim}
 
 \begin{enumerate}
@@ -341,24 +234,28 @@ podatke diferenciranje:
 \end{enumerate}
 
 \begin{verbatim}
-## [1] "OPTIMALNI MODEL: izberemo tisti model, ki ima najnižji aic. V najinem primeru je to MA(1)."
+## [1] "OPTIMALNI MODEL: izberemo tisti model, ki ima najnižji aic. V najinem primeru je to AR(3)."
 \end{verbatim}
 
-\includegraphics{porocilo_seminar_D_files/figure-latex/unnamed-chunk-10-1.pdf}
-\includegraphics{porocilo_seminar_D_files/figure-latex/unnamed-chunk-10-2.pdf}
+\includegraphics{porocilo_seminar_D_files/figure-latex/unnamed-chunk-11-1.pdf}
+\includegraphics{porocilo_seminar_D_files/figure-latex/unnamed-chunk-11-2.pdf}
 
 \begin{verbatim}
 ## 
 ##  Shapiro-Wilk normality test
 ## 
 ## data:  best$residuals
-## W = 0.99795, p-value = 0.4167
+## W = 0.99837, p-value = 0.6376
 \end{verbatim}
 
-\includegraphics{porocilo_seminar_D_files/figure-latex/unnamed-chunk-10-3.pdf}
+\begin{verbatim}
+## [1] "Shapirov test ne zavrne hipoteze, torej je porazdelitev značilno podobna normalni porazdelitvi."
+\end{verbatim}
+
+\includegraphics{porocilo_seminar_D_files/figure-latex/unnamed-chunk-11-3.pdf}
 
 \begin{verbatim}
-## [1] "Shapirov test ne zavrne hipoteze, torej gre za normalno porazdelitev kar je očitno tudi iz grafa."
+## [1] "Tudi z grafa je očitno, da gre za normalno porazdelitev."
 \end{verbatim}
 
 \begin{enumerate}
@@ -369,27 +266,31 @@ podatke diferenciranje:
   Oglejte si ostanke po vašem modelu in komentirajte, ali so videti kot
   beli šum. Primerjajte njihovo porazdelitev z normalno.
 
-  \includegraphics{porocilo_seminar_D_files/figure-latex/unnamed-chunk-11-1.pdf}
+  \includegraphics{porocilo_seminar_D_files/figure-latex/unnamed-chunk-12-1.pdf}
 \end{enumerate}
 
 \begin{verbatim}
 ## 
 ##  Box-Pierce test
 ## 
-## data:  d.res
-## X-squared = 179.27, df = 1, p-value < 2.2e-16
+## data:  x.res
+## X-squared = 0.10129, df = 1, p-value = 0.7503
+\end{verbatim}
+
+\begin{verbatim}
+## [1] "Box-Pierceov test ne zavrne hipoteze, torej gre za beli šum."
 \end{verbatim}
 
 \begin{verbatim}
 ## 
 ##  Box-Ljung test
 ## 
-## data:  d.res
-## X-squared = 179.92, df = 1, p-value < 2.2e-16
+## data:  x.res
+## X-squared = 0.10166, df = 1, p-value = 0.7498
 \end{verbatim}
 
 \begin{verbatim}
-## [1] "Ne gre za white noise."
+## [1] "Ljung-Boxov test prav tako ne zavrne hipoteze, zato lahko sklepamo, da gre za beli šum."
 \end{verbatim}
 
 \begin{enumerate}
@@ -403,9 +304,11 @@ podatke diferenciranje:
   sezonskosti.
 \end{enumerate}
 
-\includegraphics{porocilo_seminar_D_files/figure-latex/unnamed-chunk-12-1.pdf}
-\includegraphics{porocilo_seminar_D_files/figure-latex/unnamed-chunk-12-2.pdf}
-\includegraphics{porocilo_seminar_D_files/figure-latex/unnamed-chunk-12-3.pdf}
+\begin{verbatim}
+## [1] "Vrednost naslednjega člena v napovedi = 501.4451."
+\end{verbatim}
+
+\includegraphics{porocilo_seminar_D_files/figure-latex/unnamed-chunk-13-1.pdf}
 
 \begin{enumerate}
 \def\labelenumi{\arabic{enumi}.}
@@ -417,12 +320,12 @@ podatke diferenciranje:
   -- pred in po odstranitvi trenda in sezonskosti.
 \end{enumerate}
 
-\includegraphics{porocilo_seminar_D_files/figure-latex/unnamed-chunk-13-1.pdf}
-\includegraphics{porocilo_seminar_D_files/figure-latex/unnamed-chunk-13-2.pdf}
-\includegraphics{porocilo_seminar_D_files/figure-latex/unnamed-chunk-13-3.pdf}
-\includegraphics{porocilo_seminar_D_files/figure-latex/unnamed-chunk-13-4.pdf}
+\includegraphics{porocilo_seminar_D_files/figure-latex/unnamed-chunk-14-1.pdf}
+\includegraphics{porocilo_seminar_D_files/figure-latex/unnamed-chunk-14-2.pdf}
+\includegraphics{porocilo_seminar_D_files/figure-latex/unnamed-chunk-14-3.pdf}
+\includegraphics{porocilo_seminar_D_files/figure-latex/unnamed-chunk-14-4.pdf}
 
-DATOTEKA B, če logaritmiramo
+DATOTEKA B
 
 \begin{enumerate}
 \def\labelenumi{\arabic{enumi}.}
@@ -431,7 +334,7 @@ DATOTEKA B, če logaritmiramo
   \emph{Narišite graf in komentirajte, ali se iz njega vidi kakšen trend
   ali sezonskost.}
 
-  \includegraphics{porocilo_seminar_D_files/figure-latex/unnamed-chunk-14-1.pdf}
+  \includegraphics{porocilo_seminar_D_files/figure-latex/unnamed-chunk-15-1.pdf}
 \end{enumerate}
 
 \begin{verbatim}
@@ -452,7 +355,7 @@ DATOTEKA B, če logaritmiramo
   in kakšna naj bi bila perioda.}
 \end{enumerate}
 
-\includegraphics{porocilo_seminar_D_files/figure-latex/unnamed-chunk-15-1.pdf}
+\includegraphics{porocilo_seminar_D_files/figure-latex/unnamed-chunk-16-1.pdf}
 
 \begin{verbatim}
 ## 
@@ -460,54 +363,47 @@ DATOTEKA B, če logaritmiramo
 ## lm(formula = d ~ t)
 ## 
 ## Residuals:
-##     Min      1Q  Median      3Q     Max 
-## -5.7489 -0.2438  0.0435  0.3718  1.1512 
+##      Min       1Q   Median       3Q      Max 
+## -109.586  -30.242    0.115   29.316  120.467 
 ## 
 ## Coefficients:
-##             Estimate Std. Error t value Pr(>|t|)    
-## (Intercept) 3.598206   0.083546  43.069  < 2e-16 ***
-## t           0.004720   0.000555   8.506 1.48e-15 ***
-## ---
-## Signif. codes:  0 '***' 0.001 '**' 0.01 '*' 0.05 '.' 0.1 ' ' 1
+##              Estimate Std. Error t value Pr(>|t|)
+## (Intercept)  1.020147   5.303022   0.192    0.848
+## t           -0.006315   0.035158  -0.180    0.858
 ## 
-## Residual standard error: 0.6716 on 258 degrees of freedom
-## Multiple R-squared:  0.219,  Adjusted R-squared:  0.216 
-## F-statistic: 72.35 on 1 and 258 DF,  p-value: 1.481e-15
+## Residual standard error: 42.3 on 257 degrees of freedom
+## Multiple R-squared:  0.0001255,  Adjusted R-squared:  -0.003765 
+## F-statistic: 0.03226 on 1 and 257 DF,  p-value: 0.8576
 \end{verbatim}
 
 \begin{verbatim}
 ## 
 ## Call:
-## lm(formula = d ~ t + I(cos(perioda2 * t)) + I(cos(perioda3 * 
-##     t)) + I(cos(perioda4 * t)) + I(sin(perioda5 * t)) + I(cos(perioda6 * 
-##     t)))
+## lm(formula = d ~ I(sin(perioda * t)) + I(cos(perioda * t)) + 
+##     I(sin(perioda2 * t)))
 ## 
 ## Residuals:
-##     Min      1Q  Median      3Q     Max 
-## -5.0183 -0.1792  0.0701  0.3551  0.9637 
+##      Min       1Q   Median       3Q      Max 
+## -129.473  -25.364   -1.095   25.456  127.129 
 ## 
 ## Coefficients:
-##                        Estimate Std. Error t value Pr(>|t|)    
-## (Intercept)           3.5969896  0.0775436  46.387  < 2e-16 ***
-## t                     0.0047298  0.0005151   9.182  < 2e-16 ***
-## I(cos(perioda2 * t))  0.2267701  0.0546668   4.148 4.58e-05 ***
-## I(cos(perioda3 * t)) -0.1603372  0.0546668  -2.933  0.00366 ** 
-## I(cos(perioda4 * t)) -0.1244814  0.0546668  -2.277  0.02362 *  
-## I(sin(perioda5 * t))  0.1724847  0.0546669   3.155  0.00180 ** 
-## I(cos(perioda6 * t))  0.1297305  0.0546668   2.373  0.01839 *  
+##                      Estimate Std. Error t value Pr(>|t|)    
+## (Intercept)            0.1929     2.4665   0.078 0.937725    
+## I(sin(perioda * t))  -13.5722     3.4882  -3.891 0.000128 ***
+## I(cos(perioda * t))   11.0090     3.4882   3.156 0.001791 ** 
+## I(sin(perioda2 * t))  11.9987     3.4882   3.440 0.000680 ***
 ## ---
 ## Signif. codes:  0 '***' 0.001 '**' 0.01 '*' 0.05 '.' 0.1 ' ' 1
 ## 
-## Residual standard error: 0.6233 on 253 degrees of freedom
-## Multiple R-squared:  0.3405, Adjusted R-squared:  0.3248 
-## F-statistic: 21.77 on 6 and 253 DF,  p-value: < 2.2e-16
+## Residual standard error: 39.69 on 255 degrees of freedom
+## Multiple R-squared:  0.1265, Adjusted R-squared:  0.1162 
+## F-statistic: 12.31 on 3 and 255 DF,  p-value: 1.51e-07
 \end{verbatim}
 
-\includegraphics{porocilo_seminar_D_files/figure-latex/unnamed-chunk-15-2.pdf}
-\includegraphics{porocilo_seminar_D_files/figure-latex/unnamed-chunk-15-3.pdf}
-
-\includegraphics{porocilo_seminar_D_files/figure-latex/unnamed-chunk-16-1.pdf}
 \includegraphics{porocilo_seminar_D_files/figure-latex/unnamed-chunk-16-2.pdf}
+\includegraphics{porocilo_seminar_D_files/figure-latex/unnamed-chunk-16-3.pdf}
+
+\includegraphics{porocilo_seminar_D_files/figure-latex/unnamed-chunk-17-1.pdf}
 
 \begin{verbatim}
 ## Daniell(2) 
@@ -543,30 +439,30 @@ DATOTEKA B, če logaritmiramo
 ## coef[ 2] = 0.0625
 \end{verbatim}
 
-\includegraphics{porocilo_seminar_D_files/figure-latex/unnamed-chunk-16-3.pdf}
-\includegraphics{porocilo_seminar_D_files/figure-latex/unnamed-chunk-16-4.pdf}
-\includegraphics{porocilo_seminar_D_files/figure-latex/unnamed-chunk-16-5.pdf}
+\includegraphics{porocilo_seminar_D_files/figure-latex/unnamed-chunk-17-2.pdf}
+\includegraphics{porocilo_seminar_D_files/figure-latex/unnamed-chunk-17-3.pdf}
+\includegraphics{porocilo_seminar_D_files/figure-latex/unnamed-chunk-17-4.pdf}
 
 \begin{verbatim}
-##   [1]   1   2   3   4   5   6   7   8   9  10  11 102 101 100 103 114  99  67
-##  [19] 113  98  66  12 115  68 104 112  65  13  97  64  69 116 111 105  14  24
-##  [37]  70  63 117  96  23 106 110  25  22  71 109  72 108  15 107 118  21  95
-##  [55]  26  20  62  73  94  16 119  19  93  75  74  76  92  27 130 131  90  50
-##  [73]  18  89  17 129  77 128  91  51 132  52  88  53 133 120  48  49  61 134
-##  [91] 127  87  78  47 135 126 125  28  86 124  80  79  85 123 122  54  46  81
-## [109] 121  45  84  42  44  41  39  82  40  43  29  83  55  38  60  59  37  58
-## [127]  56  36  30  57  35  34  31  33  32
+##   [1] 113 114 112 115 111  99  98 100  97 101  96 128 116 102 129 127 110  95
+##  [19] 130 126 117  92  94  91  93 131  90  88 103 132  87 125 124  89 109  86
+##  [37] 118 133 123  85 134 108 119 104  84 122 135 107  83 105  82  80 121  81
+##  [55]  78 120  79 106  67  69  68  77  70  76  75  66  74  71  72  73  65  64
+##  [73]  63  62  61  59  60  58  57  56  55  54  41  53  42  40  43  44  39  45
+##  [91]  46  38  52  29  28  30  47  31  50  37  51  49  27  48  32  36  33  26
+## [109]  35  34  25  24  23  22  21  20  19  18  17  12  13  16  10  15  14  11
+## [127]   9   8   7   6   5   4   3   2   1
 \end{verbatim}
 
 \begin{verbatim}
-## [1] NA NA NA NA
+## [1] 0.4185185 0.4222222 0.4148148 0.4259259 0.4111111
 \end{verbatim}
 
 \begin{verbatim}
-## [1] NA NA NA NA
+## [1] 2.389381 2.368421 2.410714 2.347826 2.432432
 \end{verbatim}
 
-\includegraphics{porocilo_seminar_D_files/figure-latex/unnamed-chunk-17-1.pdf}
+\includegraphics{porocilo_seminar_D_files/figure-latex/unnamed-chunk-18-1.pdf}
 
 \begin{enumerate}
 \def\labelenumi{\arabic{enumi}.}
@@ -579,22 +475,22 @@ DATOTEKA B, če logaritmiramo
 \end{enumerate}
 
 \begin{verbatim}
-## [1] 0.324818
+## [1] 0.1162349
 \end{verbatim}
 
-\includegraphics{porocilo_seminar_D_files/figure-latex/unnamed-chunk-18-1.pdf}
+\includegraphics{porocilo_seminar_D_files/figure-latex/unnamed-chunk-19-1.pdf}
 
 \begin{verbatim}
 ## 
 ##  Augmented Dickey-Fuller Test
 ## 
 ## data:  d.res
-## Dickey-Fuller = -5.9954, Lag order = 6, p-value = 0.01
+## Dickey-Fuller = -9.8487, Lag order = 6, p-value = 0.01
 ## alternative hypothesis: stationary
 \end{verbatim}
 
 \begin{verbatim}
-## [1] "Augmented Dickey-Fuller Test ne zavrne stacionarnosti."
+## [1] "Augmented Dickey-Fuller Test zavrne hipotezo, torej imamo stacionarnost."
 \end{verbatim}
 
 \begin{enumerate}
@@ -606,11 +502,11 @@ DATOTEKA B, če logaritmiramo
   predlagajte vsaj en model vrste AR(p) ali MA(q).}
 \end{enumerate}
 
-\includegraphics{porocilo_seminar_D_files/figure-latex/unnamed-chunk-19-1.pdf}
-\includegraphics{porocilo_seminar_D_files/figure-latex/unnamed-chunk-19-2.pdf}
+\includegraphics{porocilo_seminar_D_files/figure-latex/unnamed-chunk-20-1.pdf}
+\includegraphics{porocilo_seminar_D_files/figure-latex/unnamed-chunk-20-2.pdf}
 
 \begin{verbatim}
-## [1] "Videti je, da nimamo avtokorelacije."
+## [1] "Videti je, da imamo model MA(1)."
 \end{verbatim}
 
 \begin{enumerate}
@@ -626,24 +522,39 @@ DATOTEKA B, če logaritmiramo
 \end{enumerate}
 
 \begin{verbatim}
-## [1] "Profesor Toman je bil bolj eleganten in se je iskanja rešitve lotil s preprosto zanko."
-\end{verbatim}
-
-\begin{verbatim}
 ## 
 ## Call:
-## arima(x = d.res, order = c(0, 0, 0))
+## arima(x = d.res, order = c(0, 0, 1))
 ## 
 ## Coefficients:
-##       intercept
-##          0.0000
-## s.e.     0.0381
+##           ma1  intercept
+##       -0.8230     0.0694
+## s.e.   0.0373     0.3347
 ## 
-## sigma^2 estimated as 0.378:  log likelihood = -242.45,  aic = 488.91
+## sigma^2 estimated as 892:  log likelihood = -1247.83,  aic = 2501.66
 \end{verbatim}
 
 \begin{verbatim}
-## [1] "Algoritem vrne predlog za model ARMA(0,0)."
+## [1] 2641.848    0.000    0.000
+## [1] 2501.655    0.000    1.000
+## [1] 2503.039    0.000    2.000
+## [1] 2504.986    0.000    3.000
+## [1] 2566.877    1.000    0.000
+## [1] 2503.076    1.000    1.000
+## [1] 2505.03    1.00    2.00
+## [1] 2506.516    1.000    3.000
+## [1] 2524.164    2.000    0.000
+## [1] 2504.782    2.000    1.000
+## [1] 2506.134    2.000    2.000
+## [1] 2505.88    2.00    3.00
+## [1] 2517.258    3.000    0.000
+## [1] 2501.527    3.000    1.000
+## [1] 2501.342    3.000    2.000
+## [1] 2506.387    3.000    3.000
+\end{verbatim}
+
+\begin{verbatim}
+## [1] "Algoritem vrne predlog za model MA(1)."
 \end{verbatim}
 
 \begin{enumerate}
@@ -655,24 +566,28 @@ DATOTEKA B, če logaritmiramo
 \end{enumerate}
 
 \begin{verbatim}
-## [1] "OPTIMALNI MODEL: izberemo tisti model, ki ima najnižji aic. V najinem primeru je to ARMA(0,0)."
+## [1] "OPTIMALNI MODEL: izberemo tisti model, ki ima najnižji aic. V najinem primeru je to MA(1)."
 \end{verbatim}
 
-\includegraphics{porocilo_seminar_D_files/figure-latex/unnamed-chunk-21-1.pdf}
-\includegraphics{porocilo_seminar_D_files/figure-latex/unnamed-chunk-21-2.pdf}
+\includegraphics{porocilo_seminar_D_files/figure-latex/unnamed-chunk-22-1.pdf}
+\includegraphics{porocilo_seminar_D_files/figure-latex/unnamed-chunk-22-2.pdf}
 
 \begin{verbatim}
 ## 
 ##  Shapiro-Wilk normality test
 ## 
 ## data:  best$residuals
-## W = 0.71579, p-value < 2.2e-16
+## W = 0.98559, p-value = 0.01039
 \end{verbatim}
 
-\includegraphics{porocilo_seminar_D_files/figure-latex/unnamed-chunk-21-3.pdf}
+\begin{verbatim}
+## [1] "Shapirov test zavrne hipotezo, torej imamo normalno porazdelitev."
+\end{verbatim}
+
+\includegraphics{porocilo_seminar_D_files/figure-latex/unnamed-chunk-22-3.pdf}
 
 \begin{verbatim}
-## [1] "Shapirov test zavrne hipotezo, torej ne gre za normalno porazdelitev, kar je očitno tudi z grafa."
+## [1] "Shapirov test zavrne hipotezo, razvidno pa je tudi z grafa, da gre za normalno porazdelitev."
 \end{verbatim}
 
 \begin{enumerate}
@@ -682,7 +597,7 @@ DATOTEKA B, če logaritmiramo
 \item
   \emph{Oglejte si ostanke po vašem modelu in komentirajte, ali so
   videti kot beli šum. Primerjajte njihovo porazdelitev z normalno.}
-  \includegraphics{porocilo_seminar_D_files/figure-latex/unnamed-chunk-22-1.pdf}
+  \includegraphics{porocilo_seminar_D_files/figure-latex/unnamed-chunk-23-1.pdf}
 \end{enumerate}
 
 \begin{verbatim}
@@ -690,7 +605,11 @@ DATOTEKA B, če logaritmiramo
 ##  Box-Pierce test
 ## 
 ## data:  d.res
-## X-squared = 0.46321, df = 1, p-value = 0.4961
+## X-squared = 66.586, df = 1, p-value = 3.331e-16
+\end{verbatim}
+
+\begin{verbatim}
+## [1] "Box-Pierceov test zavrne hipotezo, torej ne gre za beli šum."
 \end{verbatim}
 
 \begin{verbatim}
@@ -698,11 +617,11 @@ DATOTEKA B, če logaritmiramo
 ##  Box-Ljung test
 ## 
 ## data:  d.res
-## X-squared = 0.46858, df = 1, p-value = 0.4936
+## X-squared = 67.36, df = 1, p-value = 2.22e-16
 \end{verbatim}
 
 \begin{verbatim}
-## [1] "Imamo white noise!"
+## [1] "Ljung-Boxov test prav tako zavrne hipotezo, ne gre za beli šum."
 \end{verbatim}
 
 \begin{enumerate}
@@ -716,8 +635,13 @@ DATOTEKA B, če logaritmiramo
   sezonskosti.}
 \end{enumerate}
 
-\includegraphics{porocilo_seminar_D_files/figure-latex/unnamed-chunk-23-1.pdf}
-\includegraphics{porocilo_seminar_D_files/figure-latex/unnamed-chunk-23-2.pdf}
+\includegraphics{porocilo_seminar_D_files/figure-latex/unnamed-chunk-24-1.pdf}
+
+\begin{verbatim}
+## [1] "Vrednost naslednjega člena v napovedi = 96.32199."
+\end{verbatim}
+
+\includegraphics{porocilo_seminar_D_files/figure-latex/unnamed-chunk-24-2.pdf}
 
 \begin{enumerate}
 \def\labelenumi{\arabic{enumi}.}
@@ -729,9 +653,13 @@ DATOTEKA B, če logaritmiramo
   šum -- pred in po odstranitvi trenda in sezonskosti.}
 \end{enumerate}
 
-\includegraphics{porocilo_seminar_D_files/figure-latex/unnamed-chunk-24-1.pdf}
-\includegraphics{porocilo_seminar_D_files/figure-latex/unnamed-chunk-24-2.pdf}
-\includegraphics{porocilo_seminar_D_files/figure-latex/unnamed-chunk-24-3.pdf}
-\includegraphics{porocilo_seminar_D_files/figure-latex/unnamed-chunk-24-4.pdf}
+\includegraphics{porocilo_seminar_D_files/figure-latex/unnamed-chunk-25-1.pdf}
+\includegraphics{porocilo_seminar_D_files/figure-latex/unnamed-chunk-25-2.pdf}
+\includegraphics{porocilo_seminar_D_files/figure-latex/unnamed-chunk-25-3.pdf}
+\includegraphics{porocilo_seminar_D_files/figure-latex/unnamed-chunk-25-4.pdf}
+
+\begin{verbatim}
+## [1] "Več komentarjev in opomb lahko najdete v Rmd datoteki."
+\end{verbatim}
 
 \end{document}
